--- a/NeuroSpecBackend/NeuroSpecBackend/NeuroSpecBackend.csproj
+++ b/NeuroSpecBackend/NeuroSpecBackend/NeuroSpecBackend.csproj
@@ -9,12 +9,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Fhir.Metrics" Version="1.3.0" />
     <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
     <PackageReference Include="Hl7.Fhir.ElementModel" Version="4.3.0" />
     <PackageReference Include="Hl7.Fhir.R5" Version="5.8.1" />
     <PackageReference Include="Microsoft.AspNet.SignalR.Core" Version="2.4.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.0.1" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.1" />
     <PackageReference Include="Microsoft.Maui.Essentials" Version="8.0.60" />
     <PackageReference Include="Microsoft.NET.ILLink.Tasks" Version="8.0.6" />
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.14.1" />
@@ -27,6 +32,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="System.Collections" Version="4.3.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="System.Text.Encoding" Version="4.3.0" />
     <PackageReference Include="System.Text.Json" Version="8.0.3" />
