--- a/NeuroSpecBackend/NeuroSpecBackend/appsettings.json
+++ b/NeuroSpecBackend/NeuroSpecBackend/appsettings.json
@@ -7,6 +7,11 @@
     "DatabaseName": "NeuroDb"
   },
 
+  "Jwt": {
+    "Secret": "YourNewStrongSecretKey123YourNewStrongSecretKey123",
+    "Lifespan": "30"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
